--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@hono/vite-dev-server": "^0.19.0",
     "@types/bun": "^1.2.4",
+    "@types/file-saver": "^2.0.7",
     "@typescript-eslint/eslint-plugin": "^8.26.0",
     "@typescript-eslint/parser": "^8.26.0",
     "eslint": "^9.21.0",
@@ -27,8 +28,14 @@
     "vite": "^6.2.0"
   },
   "dependencies": {
+    "@soorria/solid-dropzone": "^1.0.1",
+    "@tailwindcss/vite": "^4.0.11",
+    "file-saver": "^2.0.5",
     "hono": "^4.7.4",
+    "jszip": "^3.10.1",
+    "solid-icons": "^1.1.0",
     "solid-js": "^1.9.5",
+    "tailwindcss": "^4.0.11",
     "vike": "0.4.224",
     "vike-metadata-solid": "^1.0.4",
     "vike-solid": "^0.7.8"
