--- a/package.json
+++ b/package.json
@@ -24,18 +24,21 @@
     "eslint": "^9.21.0",
     "eslint-plugin-solid": "^0.14.5",
     "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.8.2",
     "vite": "^6.2.0"
   },
   "dependencies": {
     "@soorria/solid-dropzone": "^1.0.1",
     "@tailwindcss/vite": "^4.0.11",
+    "bagon-hooks": "^0.0.4",
     "file-saver": "^2.0.5",
     "hono": "^4.7.4",
     "jszip": "^3.10.1",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.9.5",
     "tailwindcss": "^4.0.11",
+    "tippy.js": "^6.3.7",
     "vike": "0.4.224",
     "vike-metadata-solid": "^1.0.4",
     "vike-solid": "^0.7.8"
