--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vite": "^6.2.0"
   },
   "dependencies": {
+    "@bprogress/core": "^1.2.4",
     "@soorria/solid-dropzone": "^1.0.1",
     "@tailwindcss/vite": "^4.0.11",
     "bagon-hooks": "^0.0.4",
